--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:name=".Register"
             android:exported="false" />
         <activity
+            android:name=".RequestsActivity"
+            android:exported="true"/>
+
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
